--- a/src/app/dashboard/inventory/inventory.component.scss
+++ b/src/app/dashboard/inventory/inventory.component.scss
@@ -101,6 +101,10 @@
             .filter-input {
                 outline: none;
                 min-width: 300px;
+
+                &:hover {
+                    background-color: $mat-hover-background;
+                }
             }
 
             .p-relative {
@@ -151,6 +155,46 @@
 
                 &:hover {
                     cursor: pointer;
+                    background-color: $mat-hover-background;
+                }
+            }
+
+            .date-range-picker {
+                padding: 0px;
+                --mdc-filled-text-field-active-indicator-height: 0;
+                --mdc-filled-text-field-focus-active-indicator-height: 0;
+
+
+                ::ng-deep .mat-mdc-form-field-flex {
+                    height: -webkit-fill-available;
+                }
+
+                ::ng-deep .mat-date-range-input {
+                    height: 100%;
+                }
+
+                ::ng-deep .mat-date-range-input-container {
+                    height: 100%;
+                }
+
+                ::ng-deep .mdc-text-field--filled .mdc-floating-label--float-above {
+                    display: none;
+                }
+
+                ::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) {
+                    background-color: white;
+                }
+
+                ::ng-deep .mat-mdc-form-field-infix {
+                    padding: 0px;
+                    min-height: unset;
+                    height: 100%;
+                }
+
+                ::ng-deep .mat-mdc-floating-label {
+                    font-family: "Comfortaa", serif;
+                    top: 53%;
+                    color: $secondary-color;
                 }
             }
 
