--- a/src/assets/styles/color.scss
+++ b/src/assets/styles/color.scss
@@ -12,6 +12,7 @@ $border-very-light: #f3f3f6;
 $border-very-light2: #e8e8ec;
 
 $primary-mat-color: #1469c0;
+$mat-hover-background: #EDEDED;
 
 $primary-web-yellow: #feaf08;
 $primary-web-red: #e41018;
