added all nesessary changes as per v1.2

--- a/src/app/dashboard/entry-data-table/entry-data-table.component.html
+++ b/src/app/dashboard/entry-data-table/entry-data-table.component.html
@@ -75,7 +75,7 @@
 
     <ng-template #actionText let-value let-column="column">
         <div class="nowrap">
-            <span class="name-text" (click)="editEntry(value)" tabindex="0" *ngIf="isCustomer">Edit | </span>
+            <span class="name-text" (click)="editEntry(value)" tabindex="0" *ngIf="isCustomer">Edit</span> |
             <span class="name-text" (click)="showMore(value)" tabindex="0">More</span>
         </div>
     </ng-template>
